# mushrooms

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Thirdparty.cmake  main.cpp
.github/workflows/: build.yml
MapView/: CMakeLists.txt  MapItem.h  MapVIew.qml  MapView.cpp  MapView.h  qml.qrc
connector/: CMakeLists.txt  main.cpp
